# testbench-requirement-service

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  bootstrap.py  build_binary.py  config.py  config_.py  download_dependencies.py  pyproject.toml  requirements.txt  tasks.py  testbench-requirement-service.spec
.github/workflows/: release.yaml
docs/: cli-commands.md  configuration.md  intro.md  testbench-integration.md  windows-service-installation.md
docs/cli/: _category_.json  commands.md
docs/configuration/: authentication.md  config-file.md
docs/getting-started/: installation.md  quickstart.md
docs/readers/: _category_.json  custom-readers.md  custom.md  excel.md  index.md  jira.md  jsonl.md
docs/readers/excel/: _category_.json  configuration.md  setup.md  testing.md
docs/readers/jira/: _category_.json  configuration.md  setup.md  testing.md
docs/readers/jsonl/: _category_.json  configuration.md  setup.md  testing.md
docs/server/: overview.md
docs/windows-service-installation/: index.md
docs/windows_service/: _category_.json  windows_service_installation_guide.md
examples/: .env.example  config.toml  excel_config.properties  jira_config.toml  jsonlreader_config.py
model/: generated_model.py
requirements/: UserDefinedAttributes.json
requirements/Demo/: Baseline1.jsonl
requirements/excel/: readme.txt
requirements/excel/CarKonfigurator/: CarKonfigurator.properties  aktuelle Baseline.csv  aktuelle Baseline.xls  erster Entwurf.csv  erster Entwurf.txt  erster Entwurf.xls  erster Entwurf.xlsx
requirements/excel/Demo/: Baseline2.xls  Baseline2.xlsx
requirements/excel/Demo/subfolder/: Baseline1_CSV.csv  Baseline1_TSV.tsv
requirements/excel/VSR-Dreamcar/: README-german  current baseline.csv  current baseline.xls  first draft.csv  first draft.tsv  first draft.xls
requirements/jsonl/Demo/: Baseline1.jsonl  Baseline2.jsonl
src/: openapi.yaml  server.py
src/testbench_requirement_service/: __init__.py  __main__.py  app.py  cli.py  config.py  exceptions.py  middleware.py  middlewares.py  model.py  openapi.yaml  routes.py  set_credentials.py
src/testbench_requirement_service/models/: config.py  requirement.py
src/testbench_requirement_service/readers/: ExcelFileReader.py  JiraRestReader.py  JsonlFileReader.py  __init__.py  abstract_file_reader.py  abstract_reader.py  excel_reader.py  jira_reader.py  utils.py
src/testbench_requirement_service/readers/excel/: config.py  reader.py  utils.py
src/testbench_requirement_service/readers/jira/: client.py  config.py  reader.py  render_utils.py  utils.py
src/testbench_requirement_service/readers/jsonl/: config.py  reader.py
src/testbench_requirement_service/readers/jsonl/schemas/: generate_schemas.py  requirement_object_schema.json  user_defined_attributes_schema.json
src/testbench_requirement_service/readers/sql/: config.py  orm.py  reader.py
src/testbench_requirement_service/static/: rendered_fields.css
src/testbench_requirement_service/utils/: auth.py  cache.py  config.py  config_wizard.py  date_format.py  dependencies.py  helpers.py  import_utils.py  validation.py  wizard.py
tests/robot/data/: config_excel.toml  config_jsonl.toml
tests/robot/data/reader_config/excel/: ProjectDemo.properties
tests/robot/data/reader_config/jsonl/: reader_config.toml
tests/robot/data/requirements/excel/CarKonfigurator/: aktuelle Baseline.csv  aktuelle Baseline.xlsx  erster Entwurf.csv  erster Entwurf.txt
tests/robot/data/requirements/excel/Demo/: Baseline1.csv  Baseline1.txt  Baseline1.xlsx  Baseline2.tsv  Baseline2.txt  Baseline2.xlsx  Demo.properties
tests/robot/data/requirements/excel/Demo/subfolder/: Baseline1_XLS.xls
tests/robot/data/requirements/jsonl/: UserDefinedAttributes.json
tests/robot/data/requirements/jsonl/Demo/: Baseline1.jsonl  Baseline2.jsonl
tests/robot/resources/: APIKeywords.py  service_setup.robot
tests/robot/tests/excel_tests/: __init__.robot  test_routes.robot
tests/robot/tests/generic_tests/: __init__.robot  test_auth.robot  test_routes.robot
tests/robot/tests/jsonl_tests/: __init__.robot  test_routes.robot
tests/unit/readers/excel/: test_tree_utils.py
tests/unit/readers/sql/: test_config.py  test_reader_udas.py
tests/unit/utils/: test_date_format.py
