[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "testbench-requirement-service"
authors = [{name = "René Rohner", email = "rene.rohner@imbus.de"}]
readme = "README.md"
license = "Apache-2.0"
dynamic = ["version", "description"]
requires-python = ">=3.10"
dependencies = [
  "sanic>=24.12,<25.0",
  "sanic-ext>=23.12,<25.0",
  "pydantic>=2.10.6,<3.0.0",
  "click>=8.1.8,<9.0.0",
  "tomli>=2.2.1,<3.0.0",
  "python-dotenv>=1.1.1",

  # TODO: remove excel dependencies from main dependencies
  "pandas>=2.2.3,<3.0.0",
  "openpyxl>=3.1.5,<4.0.0",
  "xlrd>=2.0.1,<3.0.0",
  "javaproperties>=0.8.2,<1.0.0",
  # TODO: remove jira dependencies from main dependencies
  "beautifulsoup4>=4.13.5,<5.0.0",
  "jira>=3.10.5,<4.0.0",
]

[project.optional-dependencies]
excel = [
  "pandas>=2.2.3,<3.0.0",
  "openpyxl>=3.1.5,<4.0.0",
  "xlrd>=2.0.1,<3.0.0",
  "javaproperties>=0.8.2,<1.0.0",
]
jira = [
  "beautifulsoup4>=4.13.5,<5.0.0",
  "jira>=3.10.5,<4.0.0",
]
dev = [
  "ruff>=0.9.6",
  "pre-commit>=4.1.0",
  "invoke>=2.2.0",
  "mypy>=1.15.0",
  "flit>=3.10.1",
  "wheel>=0.45.1",
]
test = [
  "robotframework>=7.3.2",
  "robotframework-assertion-engine>=3.0.3",
  "robotframework-robocop>=6.7.0",
  "requests>=2.32.5",
]

[project.urls]
Home = "https://github.com/imbus/testbench-requirement-service"

[project.scripts]
testbench-requirement-service = "testbench_requirement_service.cli:cli"

[tool.mypy]
python_version = "3.10"
no_implicit_optional = true
strict_optional = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true
pretty = true
files = [
  "src"
]
exclude = '^tests/'

[tool.ruff]
fix = false
target-version = "py310"
line-length = 100
exclude = [
  "__pycache__",
  ".venv",
  "tools",
  "model",
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
unfixable = []
ignore = [
  # "ISC001",
  # "B008",  # do not perform function calls in argument defaults
  # "B904",  # TODO only temporary. should be fixed.
  # "E501",  # line too long
  "N815",  # mixedCase variable in class scope
  # "N803",  # argument name should be lowercase
  # "N806",  # variable in function should be lowercase
  # "N812",  # lowercase imported as non lowercase
  "N999",  # Invalid module name: Robot library names
  # "PLR0913",  # too many arguments
  "INP001",  # Implicit Namespace
  "T201",  # Print statements
  # "PYI041", # `float` instead of `int | float`
]
select = [
  "E",
  "F",
  "W",
  "C90",
  "I",
  "N",
  "B",
  "PYI",
  "PL",
  "PTH",
  "UP",
  "A",
  "C4",
  "DTZ",
  "ISC",
  "ICN",
  "INP",
  "PIE",
  "T20",
  "PYI",
  "PT",
  "RSE",
  "RET",
  "SIM",
  "RUF"
]

[tool.robocop]
include = [
    ".",
]
exclude = [
    "ignore_me.robot",
]

[tool.robocop.lint]
select = [
    "LEN04",
    "NAME02",
]
ignore = [
    "DOC01",
    "DOC02",
    "DOC03",
    "LEN04",
]
reports = [
    "rules_by_id",
    "scan_timer",
]
